--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,8 @@ DB_NAME =ConveyorDB
 DB_HOST =localhost
 DB_PORT =5432
 DB_USERNAME =postgres
+PUBLIC_KEY =pub_test_******************
+PRIVATE_KEY =prv_test_*****************
 
 PORT=3000
 HOST_API=http://localhost:3000/api/v1
